# docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "Verifies an existing user and returns a bearer token.",
                 "consumes": [
@@ -55,7 +55,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/auth/register": {
             "post": {
                 "description": "Creates a user account with the \"user\" role and returns it.",
                 "consumes": [
@@ -101,7 +101,7 @@
                 }
             }
         },
-        "/api/v1/todos": {
+        "/todos": {
             "get": {
                 "security": [
                     {
@@ -182,7 +182,7 @@
                 }
             }
         },
-        "/api/v1/todos/{id}": {
+        "/todos/{id}": {
             "get": {
                 "security": [
                     {
@@ -325,7 +325,7 @@
                 }
             }
         },
-        "/api/v1/users": {
+        "/users": {
             "get": {
                 "security": [
                     {
@@ -364,7 +364,7 @@
                 }
             }
         },
-        "/api/v1/users/me": {
+        "/users/me": {
             "get": {
                 "security": [
                     {
